--- a/package.json
+++ b/package.json
@@ -4,11 +4,6 @@
   "scripts": {
     "start": "webpack serve --open --config webpack.config.js"
   },
-  "devDependencies": {
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
   "dependencies": {
     "@aws-sdk/client-transcribe-streaming": "^3.651.1",
     "aws-speech-to-text": "file:",
@@ -18,6 +13,9 @@
     "microphone-stream": "^6.0.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
